[tool.poetry]
name = "playwright-stealth"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "playwright_stealth"}]

[tool.poetry.dependencies]
python = "^3.10"
playwright = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
